Issue GRUND-44: Fixed alignment issue on plot cards

--- a/scss/modules/_boxes.scss
+++ b/scss/modules/_boxes.scss
@@ -161,7 +161,6 @@
     display: block;
     font-weight: 600;
     margin-left: $layout-spacing;
-    padding-top: $layout-spacing;
     text-decoration: underline;
   }
 }
